deploy/k8s/base/gateway/ingressroute.yaml
# --- Middlewares : strip des préfixes /auth /projects /tasks
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-auth
  namespace: devopstrack
spec:
  stripPrefix:
    prefixes:
      - /auth
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-projects
  namespace: devopstrack
spec:
  stripPrefix:
    prefixes:
      - /projects
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-tasks
  namespace: devopstrack
spec:
  stripPrefix:
    prefixes:
      - /tasks
---
# Workaround AUTH : réécrit l'en-tête Host vers "localhost" (évite DisallowedHost)
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: set-host-localhost
  namespace: devopstrack
spec:
  headers:
    customRequestHeaders:
      Host: localhost
---
# --- IngressRoute : routes sur l'entrypoint web:80
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: devopstrack
  namespace: devopstrack
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`devopstrack.127.0.0.1.nip.io`) && PathPrefix(`/auth`)
      middlewares:
        - name: strip-auth
        - name: set-host-localhost     # <-- workaround temporaire pour auth
      services:
        - name: auth-service
          port: 8000
    - kind: Rule
      match: Host(`devopstrack.127.0.0.1.nip.io`) && PathPrefix(`/projects`)
      middlewares:
        - name: strip-projects
      services:
        - name: projects-service
          port: 8001
    - kind: Rule
      match: Host(`devopstrack.127.0.0.1.nip.io`) && PathPrefix(`/tasks`)
      middlewares:
        - name: strip-tasks
      services:
        - name: tasks-service
          port: 8002
